samples/_failures_safe/1761355833_fdd5ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2353d0c8.c: In function ‘main’:
./samples/SAFE/__tmp_2353d0c8.c:150:17: error: expected declaration or statement at end of input
  150 |                 next_state = state_writing(&ctx);
      |                 ^~~~~~~~~~
./samples/SAFE/__tmp_2353d0c8.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2353d0c8.c:150:17: error: expected declaration or statement at end of input
